[package]
name = "heft"
version = "0.1.0"
edition = "2024"
description = "See what's heavy — a modern, fast disk usage viewer"
license = "MIT"
repository = "https://github.com/Axect/heft"
homepage = "https://github.com/Axect/heft"
readme = "README.md"
keywords = ["disk-usage", "cli", "terminal", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
rayon = "1"
crossterm = "0.28"
owo-colors = { version = "4", features = ["supports-colors"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
